alert is a boolean.
This was incorrectly getting copy/pasted into stuff and not alerting.

--- a/yara_service/templates/yara_rule_tester_sample_tab.html
+++ b/yara_service/templates/yara_rule_tester_sample_tab.html
@@ -47,7 +47,7 @@ rule my_rule
         reference = "reference"
         author = "{{ user.first_name }} {{ user.last_name }}"
         weight = 0
-        alert = "false"
+        alert = false
         source = "{{ user_organization }}"
         version = 1
         backdoor = "backdoor"
