Add support for Backdoor and Exploit TLO.

--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -246,11 +246,13 @@ $(document).ready(function() {
         </div>
         <select id="node_types" name="types" size=11 multiple>
             <option value="Actor" selected="selected">Actors</option>
+            <option value="Backdoor" selected="selected">Backdoors</option>
             <option value="Campaign" selected="selected">Campaigns</option>
             <option value="Certificate" selected="selected">Certificates</option>
             <option value="Domain" selected="selected">Domains</option>
             <option value="Email" selected="selected">Emails</option>
             <option value="Event" selected="selected">Events</option>
+            <option value="Exploit" selected="selected">Exploit</option>
             <option value="Indicator" selected="selected">Indicators</option>
             <option value="IP" selected="selected">IPs</option>
             <option value="PCAP" selected="selected">PCAPs</option>
@@ -274,11 +276,13 @@ $(document).ready(function() {
     <div id="draggable" class="ui-widget-content" style="display: none;">
         <ul id="graph_legend">
             <li style="color: #900C0C;"><span style="color: #000;">Actors</span></li>
+            <li style="color: #5A2C75;"><span style="color: #000;">Backdoors</span></li>
             <li style="color: #FF3737;"><span style="color: #000;">Campaigns</span></li>
             <li style="color: #FFA837;"><span style="color: #000;">Certificates</span></li>
             <li style="color: #33EB33;"><span style="color: #000;">Domains</span></li>
             <li style="color: #FF8989;"><span style="color: #000;">Emails</span></li>
             <li style="color: #B05151;"><span style="color: #000;">Events</span></li>
+            <li style="color: #8CA336;"><span style="color: #000;">Exploits</span></li>
             <li style="color: #B08751;"><span style="color: #000;">Indicators</span></li>
             <li style="color: #90570C;"><span style="color: #000;">IPs</span></li>
             <li style="color: #FFCC89;"><span style="color: #000;">PCAPs</span></li>
